# movie-sphere-ui/src/openapi/openapi.json
@@ -1,9 +1,6 @@
 {
   "openapi": "3.0.1",
-  "info": {
-    "title": "OpenAPI definition",
-    "version": "v0"
-  },
+  "info": { "title": "OpenAPI definition", "version": "v0" },
   "servers": [
     {
       "url": "http://localhost:8080/api/v1",
@@ -13,16 +10,12 @@
   "paths": {
     "/auth/register": {
       "post": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "operationId": "register",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegistrationRequest"
-              }
+              "schema": { "$ref": "#/components/schemas/RegistrationRequest" }
             }
           },
           "required": true
@@ -31,11 +24,7 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
-                }
-              }
+              "application/json": { "schema": { "type": "object" } }
             }
           }
         }
@@ -43,16 +32,12 @@
     },
     "/auth/authenticate": {
       "post": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "operationId": "authenticate",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AuthenticationRequest"
-              }
+              "schema": { "$ref": "#/components/schemas/AuthenticationRequest" }
             }
           },
           "required": true
@@ -71,20 +56,28 @@
         }
       }
     },
-    "/admin/movies/{imdbId}": {
+    "/admin/movies": {
       "get": {
-        "tags": [
-          "Movie/Admin"
-        ],
-        "operationId": "getMovie",
+        "tags": ["Movie/Admin"],
+        "operationId": "searchMovies",
         "parameters": [
           {
-            "name": "imdbId",
-            "in": "path",
+            "name": "query",
+            "in": "query",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 0 }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "integer", "format": "int32", "default": 10 }
           }
         ],
         "responses": {
@@ -92,27 +85,64 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Movie"
-                }
+                "schema": { "$ref": "#/components/schemas/PageResponseMovie" }
               }
             }
           }
         }
       },
       "post": {
-        "tags": [
-          "Movie/Admin"
-        ],
+        "tags": ["Movie/Admin"],
         "operationId": "addMovie",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "type": "array", "items": { "type": "string" } }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": { "$ref": "#/components/schemas/Movie" }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Movie/Admin"],
+        "operationId": "deleteMultipleMovies",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": { "type": "integer", "format": "int64" }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": { "200": { "description": "OK" } }
+      }
+    },
+    "/admin/movies/{imdbId}": {
+      "get": {
+        "tags": ["Movie/Admin"],
+        "operationId": "getMovie",
         "parameters": [
           {
             "name": "imdbId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "schema": { "type": "string" }
           }
         ],
         "responses": {
@@ -120,9 +150,29 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Movie"
-                }
+                "schema": { "$ref": "#/components/schemas/Movie" }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Movie/Admin"],
+        "operationId": "addMovie_1",
+        "parameters": [
+          {
+            "name": "imdbId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/Movie" }
               }
             }
           }
@@ -131,30 +181,20 @@
     },
     "/user/movies": {
       "get": {
-        "tags": [
-          "Movie/User"
-        ],
+        "tags": ["Movie/User"],
         "operationId": "getAllMovies",
         "parameters": [
           {
             "name": "page",
             "in": "query",
             "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 0
-            }
+            "schema": { "type": "integer", "format": "int32", "default": 0 }
           },
           {
             "name": "size",
             "in": "query",
             "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 5
-            }
+            "schema": { "type": "integer", "format": "int32", "default": 5 }
           }
         ],
         "responses": {
@@ -162,9 +202,7 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseMovie"
-                }
+                "schema": { "$ref": "#/components/schemas/PageResponseMovie" }
               }
             }
           }
@@ -173,19 +211,14 @@
     },
     "/user/movies/{id}": {
       "get": {
-        "tags": [
-          "Movie/User"
-        ],
+        "tags": ["Movie/User"],
         "operationId": "getMovie_1",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
+            "schema": { "type": "integer", "format": "int64" }
           }
         ],
         "responses": {
@@ -193,9 +226,7 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Movie"
-                }
+                "schema": { "$ref": "#/components/schemas/Movie" }
               }
             }
           }
@@ -204,88 +235,26 @@
     },
     "/user/movies/search": {
       "get": {
-        "tags": [
-          "Movie/User"
-        ],
-        "operationId": "searchMovies",
-        "parameters": [
-          {
-            "name": "query",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 0
-            }
-          },
-          {
-            "name": "size",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 5
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseMovie"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/admin/movies": {
-      "get": {
-        "tags": [
-          "Movie/Admin"
-        ],
+        "tags": ["Movie/User"],
         "operationId": "searchMovies_1",
         "parameters": [
           {
             "name": "query",
             "in": "query",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "schema": { "type": "string" }
           },
           {
             "name": "page",
             "in": "query",
             "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 0
-            }
+            "schema": { "type": "integer", "format": "int32", "default": 0 }
           },
           {
             "name": "size",
             "in": "query",
             "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
+            "schema": { "type": "integer", "format": "int32", "default": 5 }
           }
         ],
         "responses": {
@@ -293,85 +262,38 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseMovie"
-                }
+                "schema": { "$ref": "#/components/schemas/PageResponseMovie" }
               }
             }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Movie/Admin"
-        ],
-        "operationId": "deleteMultipleMovies",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "integer",
-                  "format": "int64"
-                }
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
     },
     "/admin/movies/{movieId}": {
       "delete": {
-        "tags": [
-          "Movie/Admin"
-        ],
+        "tags": ["Movie/Admin"],
         "operationId": "deleteMovie",
         "parameters": [
           {
             "name": "movieId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
+            "schema": { "type": "integer", "format": "int64" }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": { "200": { "description": "OK" } }
       }
     }
   },
   "components": {
     "schemas": {
       "RegistrationRequest": {
-        "required": [
-          "email",
-          "firstName",
-          "lastName",
-          "password"
-        ],
+        "required": ["email", "firstName", "lastName", "password"],
         "type": "object",
         "properties": {
-          "firstName": {
-            "type": "string"
-          },
-          "lastName": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
+          "firstName": { "type": "string" },
+          "lastName": { "type": "string" },
+          "email": { "type": "string" },
           "password": {
             "maxLength": 2147483647,
             "minLength": 8,
@@ -380,15 +302,10 @@
         }
       },
       "AuthenticationRequest": {
-        "required": [
-          "email",
-          "password"
-        ],
+        "required": ["email", "password"],
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string"
-          },
+          "email": { "type": "string" },
           "password": {
             "maxLength": 2147483647,
             "minLength": 8,
@@ -398,112 +315,48 @@
       },
       "AuthenticationResponse": {
         "type": "object",
-        "properties": {
-          "token": {
-            "type": "string"
-          }
-        }
+        "properties": { "token": { "type": "string" } }
       },
       "Movie": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "Title": {
-            "type": "string"
-          },
-          "Year": {
-            "type": "string"
-          },
-          "Rated": {
-            "type": "string"
-          },
-          "Released": {
-            "type": "string"
-          },
-          "Runtime": {
-            "type": "string"
-          },
-          "Genre": {
-            "type": "string"
-          },
-          "Director": {
-            "type": "string"
-          },
-          "Writer": {
-            "type": "string"
-          },
-          "Actors": {
-            "type": "string"
-          },
-          "Plot": {
-            "type": "string"
-          },
-          "Language": {
-            "type": "string"
-          },
-          "Country": {
-            "type": "string"
-          },
-          "Awards": {
-            "type": "string"
-          },
-          "Poster": {
-            "type": "string"
-          },
-          "Metascore": {
-            "type": "string"
-          },
-          "imdbRating": {
-            "type": "string"
-          },
-          "imdbVotes": {
-            "type": "string"
-          },
-          "imdbID": {
-            "type": "string"
-          },
-          "Type": {
-            "type": "string"
-          },
-          "DVD": {
-            "type": "string"
-          },
-          "BoxOffice": {
-            "type": "string"
-          },
-          "Production": {
-            "type": "string"
-          },
-          "Website": {
-            "type": "string"
-          },
-          "Response": {
-            "type": "string"
-          },
+          "id": { "type": "integer", "format": "int64" },
+          "Title": { "type": "string" },
+          "Year": { "type": "string" },
+          "Rated": { "type": "string" },
+          "Released": { "type": "string" },
+          "Runtime": { "type": "string" },
+          "Genre": { "type": "string" },
+          "Director": { "type": "string" },
+          "Writer": { "type": "string" },
+          "Actors": { "type": "string" },
+          "Plot": { "type": "string" },
+          "Language": { "type": "string" },
+          "Country": { "type": "string" },
+          "Awards": { "type": "string" },
+          "Poster": { "type": "string" },
+          "Metascore": { "type": "string" },
+          "imdbRating": { "type": "string" },
+          "imdbVotes": { "type": "string" },
+          "imdbID": { "type": "string" },
+          "Type": { "type": "string" },
+          "DVD": { "type": "string" },
+          "BoxOffice": { "type": "string" },
+          "Production": { "type": "string" },
+          "Website": { "type": "string" },
+          "Response": { "type": "string" },
           "Ratings": {
             "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rating"
-            }
+            "items": { "$ref": "#/components/schemas/Rating" }
           }
         }
       },
       "Rating": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "Source": {
-            "type": "string"
-          },
-          "Value": {
-            "type": "string"
-          }
+          "id": { "type": "integer", "format": "int64" },
+          "Source": { "type": "string" },
+          "Value": { "type": "string" }
         }
       },
       "PageResponseMovie": {
@@ -511,32 +364,14 @@
         "properties": {
           "content": {
             "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Movie"
-            }
+            "items": { "$ref": "#/components/schemas/Movie" }
           },
-          "page": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "size": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "totalElements": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "totalPages": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "first": {
-            "type": "boolean"
-          },
-          "last": {
-            "type": "boolean"
-          }
+          "page": { "type": "integer", "format": "int32" },
+          "size": { "type": "integer", "format": "int32" },
+          "totalElements": { "type": "integer", "format": "int64" },
+          "totalPages": { "type": "integer", "format": "int32" },
+          "first": { "type": "boolean" },
+          "last": { "type": "boolean" }
         }
       }
     }
